2001-05-07  Akim Demaille  <akim@epita.fr>

	* automake.in (&handle_languages): Don't use $comp.

	
2001-05-07  Akim Demaille  <akim@epita.fr>

	* automake.in (&handle_languages): Merge the two loops over
	%extension_seen/%languages into one and group code to be run once
	per language together.

2001-05-07  Akim Demaille  <akim@epita.fr>

	* automake.in (&handle_languages): Move the `if
	($use_dependencies)' block so that loops over extensions and
	languages are next to each other.

2001-05-07  Akim Demaille  <akim@epita.fr>

	* automake.in (&depend2): Remove, merged in...
	(&handle_languages): here.

2001-05-07  Akim Demaille  <akim@epita.fr>

	* automake.in (&finish_languages): Rename as...
	(&handle_languages): this.
	Include the body of...
	(&handle_dependency): this.
	Remove.

2001-05-06  Tom Tromey  <tromey@redhat.com>

	For PR automake/46:
	* tests/Makefile.am (TESTS): Added subdir5.test.
	(XFAIL_TESTS): Likewise.
	* tests/subdir5.test: New file.

	* tests/subobj6.test (wish_SOURCES): Use $MAKE.
	* tests/subobj5.test (wish_SOURCES): Use $MAKE.

	* automake.in (GNITS_VERSION_PATTERN): Document.  Added `fork
	identifier'.
	(handle_options): Handle fork identifier in version number.

	* automake.texi (Dist): Document distcheck-hook.

	* tests/confh4.test: Updated to reflect DEFS change.
	For PR automake/132.

	Fix for PR automake/132:
	* automake.in (c, c++, objc, asm, ppf77): Add DEFAULT_INCLUDES to
	compilation.
	(java): Remove INCLUDES and DEFS from compilation.
	(lang_c_finish): Add DEFAULT_INCLUDES to compilation.
	* compile.am (DEFS): Don't include %DEFAULT_INCLUDES%.
	(DEFAULT_INCLUDES): New macro.

	* automake.in (usage): Re-align explanatory text.
	Fixes PR automake/148.

	* automake.texi (Uniform): Don't use @PROGRAMS@.
	Fixes PR automake/154.

	For PR automake/160:
	* tests/Makefile.am (TESTS): Added subobj5.test and subobj6.test.
	(XFAIL_TESTS): Added subobj6.test.
	* tests/subobj6.test: New file.
