@@ -1,5 +1,13 @@
 2001-05-07  Akim Demaille  <akim@epita.fr>
 
+	* automake.in (&handle_languages): Compute `$ltoutarg' and
+	`$outarg' independently from dependency code.
+	There is no use looping on a language's possible extensions since
+	we loop over used extensions.
+	Therefore, there is no use for a local `%transform'.
+
+2001-05-07  Akim Demaille  <akim@epita.fr>
+
 	* automake.in (&handle_languages): Don't use $comp.
 
 	
